--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -125,14 +125,13 @@ ul {
   font-size: 1.1rem;
   letter-spacing: 0.4px;
 }
-.chose-btn1:hover{
+.chose-btn1:hover {
   transform: scale(1.03);
   transition: 0.3s linear;
   background-color: #26282c;
   color: #fff;
-
 }
-.bestplan_col12 h2{
+.bestplan_col12 h2 {
   position: absolute;
   top: -25px;
   left: 90px;
@@ -142,4 +141,49 @@ ul {
   padding: 0.5rem 1.2rem;
   font-size: 1.2rem;
   border-radius: 50px;
+}
+.test_main{
+  background-color: #464646;
+  border-radius: 40px;
+  padding: 1rem 2rem;
+}
+.test_main{
+  background: #464646;
+  border-radius: 30px;
+  right: 0;
+} */
+/* swiper slide for testmonial */
+/* .swiper {
+  width: 240px;
+  height: 320px;
+}
+
+.swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 18px;
+  font-size: 22px;
+  font-weight: bold;
+  color: #fff;
+}
+
+/* footer section */
+.footer li {
+  padding: 0.4rem 0;
+  cursor: pointer;
+}
+.footer input {
+  padding: 0.8rem 4rem;
+  border-radius: 30px;
+  border: 0;
+  color: #000;
+}
+::placeholder {
+  font-size: 0.8rem;
+}
+.footer-row{
+  border-bottom: 1px solid #fff;
+  padding-right: 112px;
+  padding-right: 112px;
 }
