--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -22,11 +22,11 @@ ul {
 .hero1 {
   background-image: url("./assets/images/img4.png");
 }
-.pop {
+/* .pop {
   left: 28%;
   top: 60%;
   width: 155px;
-}
+} */
 .fit p {
   padding: 0.4 rem 0;
   font-size: 1.1rem;
@@ -186,4 +186,15 @@ ul {
   border-bottom: 1px solid #fff;
   padding-right: 112px;
   padding-right: 112px;
+}
+
+
+/* responsive design in tailwind css */
+@media only screen and (min-width:320px) and (max-width:576px){
+  .hero h1{
+    font-size: 3rem;
+  }
+  .herobtn{
+    display: inline;
+  }
 }
